# multi-agent-data-pipeline

./: .gitignore  LICENSE  README.md  app.py  logo.png:Zone.Identifier  main.py  pyproject.toml  requirements.txt
demo/: sample_data.csv
src/: models.py  pipeline.py
src/agents/: action_extractor.py  anomaly.py  cleaner.py  entity_extractor.py  pdf_parser.py  pii_anonymiser.py  risk_detector.py  summariser.py  transformer.py  validator.py
src/connectors/: bigquery.py  databricks.py  duckdb_conn.py  mysql.py  postgres.py  redshift.py  snowflake_conn.py
tests/: test_pipeline.py
